<resources>
    <string name="app_name">LoginScreen</string>
    <string name="string0">Registro</string>
    <string name="stringx">Ingresa tus datos</string>
    <string name="string1">First Name</string>
    <string name="string2">Last Name</string>
    <string name="string3">Email</string>
    <string name="string4">Password</string>
    <string name="string5">Enviar!</string>
    <string name="string6">tu Contraseña es:</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
