<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation ="vertical"
    android:background="@drawable/bci">
    <TextView android:text="@string/string0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/white1"
        android:layout_marginBottom="32dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:text = "@string/stringx"
        android:textSize="16sp"
        android:textColor="@color/white1"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:text = "@string/string1"
        android:textSize="18sp"
        android:textColor="@color/white1"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:id="@+id/edt0"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white1" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:text = "@string/string2"
        android:textSize="18sp"
        android:textColor="@color/white1"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:id="@+id/edt1"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white1"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text = "@string/string3"
        android:textSize="18sp"
        android:textColor="@color/white1"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:id="@+id/edt2"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white1"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text = "@string/string4"
        android:textSize="18sp"
        android:textColor="@color/white1"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:id="@+id/edt3"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white1"/>

    <Button
        android:layout_width="96dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/string5"
        android:id="@+id/btn"
        />

</LinearLayout>
