<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.senbonzakura.marin.loginscreen.SecondActivity"
    android:background="@drawable/bci"
    android:weightSum="1">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="144dp"
        >
    <RelativeLayout
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/nin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"></RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="144dp"
        android:layout_weight="0.27">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string1"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:textColor="@color/white1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string2"
            android:id="@+id/textView2"
            android:textSize="18sp"
            android:textColor="@color/white1"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/editText"
            android:layout_marginStart="60dp" />

        <TextView
            android:layout_width="120sp"
            android:layout_height="36sp"
            android:textSize="18sp"
            android:textColor="@color/white1"
            android:layout_below="@+id/textView"
            android:id="@+id/editText"
            android:layout_marginBottom="16dp"
            />
        <TextView
            android:layout_width="120sp"
            android:layout_height="36sp"
            android:textSize="18sp"
            android:textColor="@color/white1"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:id="@+id/editText2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string3"
            android:id="@+id/textView3"
            android:textSize="18sp"
            android:textColor="@color/white1"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="120sp"
            android:layout_height="36sp"
            android:textSize="18sp"
            android:textColor="@color/white1"

            android:id="@+id/editText3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignStart="@+id/editText2"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string6"
            android:id="@+id/textView4"
            android:textSize="18sp"
            android:textColor="@color/white1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="120sp"
            android:layout_height="36sp"
            android:textSize="18sp"
            android:textColor="@color/white1"

            android:id="@+id/editText4"
            android:layout_alignStart="@+id/editText3"
            android:layout_alignTop="@+id/textView4" />

    </RelativeLayout>


</LinearLayout>
